--- a/reference.bib
+++ b/reference.bib
@@ -37,7 +37,6 @@
 }
 
 
-
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
   title   = {Gaussian {KD-trees} for fast high-dimensional filtering},
@@ -48,6 +47,7 @@
 }
 
 
+
 @article{Adams2010,
   author  = {Adams, Andrew and Baek, Jongmin and Davis, Myers Abraham},
   title   = {Fast high-dimensional filtering using the permutohedral lattice},
@@ -56,6 +56,7 @@
   volume  = {29},
   number  = {2}
 }
+
 
 @inproceedings{Adamson2003,
   author    = {Adamson, Anders and Alexa, Marc},
@@ -72,7 +73,6 @@
   number  = {2},
   year    = {2020}
 }
-
 
 @inproceedings{Afouras2018,
   author    = {Afouras, Triantafyllos and Chung, Joon Son and Zisserman, Andrew},
@@ -107,13 +107,13 @@
   year      = {2009}
 }
 
+
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
   booktitle = {Advances in Spatial Databases},
   title     = {{3D} shape histograms for similarity search and classification in spatial databases},
   year      = {1999}
 }
-
 
 @inproceedings{Aoki2019,
   author    = {Aoki, Yasuhiro and Goforth, Hunter and Arun Srivatsan, Rangaprasad and Lucey, Simon},
@@ -192,13 +192,13 @@
   number  = {7}
 }
 
+
 @inproceedings{Aubry2011,
   author    = {Aubry, Mathieu and Schlickewei, Ulrich and Cremers, Daniel},
   booktitle = {ICCV Workshop},
   title     = {The wave kernel signature: A quantum mechanical approach to shape analysis},
   year      = {2011}
 }
-
 
 @article{Averkiou2016,
   author  = {Averkiou, Melinos and Kim, Vladimir G. and Mitra, Niloy J.},
@@ -493,6 +493,7 @@
   number  = {7}
 }
 
+
 @article{Canas2006,
   author  = {Ca\~{n}as, Guillermo D. and Gortler, Steven J.},
   title   = {Surface remeshing in arbitrary codimensions},
@@ -501,7 +502,6 @@
   volume  = {22},
   number  = {9-11}
 }
-
 
 @article{Cao2014,
   author  = {Cao, Chen and Hou, Qiming and Zhou, Kun},
@@ -528,13 +528,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Chabra2020,
   title     = {Deep Local Shapes: Learning Local {SDF} Priors for Detailed {3D} Reconstruction},
   author    = {Chabra, Rohan and Lenssen, Jan Eric and Ilg, Eddy and Schmidt, Tanner and Straub, Julian and Lovegrove, Steven and Newcombe, Richard},
   booktitle = ECCV,
   year      = {2020}
 }
-
 
 @article{Chang2015,
   title   = {{ShapeNet}: An information-rich {3D} model repository},
@@ -595,6 +595,7 @@
   year      = {2014}
 }
 
+
 @article{Chen2018,
   author  = {L. {Chen} and G. {Papandreou} and I. {Kokkinos} and K. {Murphy} and A. L. {Yuille}},
   title   = {{DeepLab}: Semantic Image Segmentation with Deep Convolutional Nets, Atrous Convolution, and Fully Connected {CRFs}},
@@ -603,7 +604,6 @@
   volume  = {40},
   number  = {4}
 }
-
 
 @inproceedings{Chen2019,
   title     = {Learning implicit fields for generative shape modeling},
@@ -620,6 +620,7 @@
   year      = {2019}
 }
 
+
 @inproceedings{Chen2020,
   title     = {A simple framework for contrastive learning of visual representations},
   author    = {Chen, Ting and Kornblith, Simon and Norouzi, Mohammad and Hinton, Geoffrey},
@@ -634,13 +635,13 @@
   year      = {2020}
 }
 
-
 @inproceedings{Chen2020b,
   title     = {A hierarchical graph network for {3D} object detection on point clouds},
   author    = {Chen, Jintai and Lei, Biwen and Song, Qingyu and Ying, Haochao and Chen, Danny Z and Wu, Jian},
   booktitle = CVPR,
   year      = {2020}
 }
+
 
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
@@ -649,13 +650,13 @@
   year      = {2021}
 }
 
-
 @inproceedings{Chen2022,
   title     = {Scaling up Kernels in {3D CNNs}},
   author    = {Yukang Chen and Jianhui Liu and Xiaojuan Qi and X. Zhang and Jian Sun and Jiaya Jia},
   booktitle = NeurIPS,
   year      = {2022}
 }
+
 
 @inproceedings{Cheng2021,
   title     = {Back-Tracing Representative Points for Voting-based {3D} Object Detection in Point Clouds},
@@ -671,7 +672,6 @@
   year      = {2021}
 }
 
-
 @inproceedings{Chiang2019,
   title     = {A unified point-based framework for {3D} segmentation},
   author    = {Chiang, Hung-Yueh and Lin, Yen-Liang and Liu, Yueh-Cheng and Hsu, Winston H},
@@ -686,6 +686,7 @@
   booktitle = CVPR,
   year      = {2020}
 }
+
 
 @article{Cho2014,
   author  = {Cho, Hojin and Lee, Hyunjoon and Kang, Henry and Lee, Seungyong},
@@ -771,13 +772,13 @@
   year   = {2018}
 }
 
-
 @inproceedings{Cordonnier2020,
   title     = {On the relationship between self-attention and convolutional layers},
   author    = {Cordonnier, Jean-Baptiste and Loukas, Andreas and Jaggi, Martin},
   booktitle = ICLR,
   year      = {2020}
 }
+
 
 @article{Cornea2007,
   author  = {Cornea, Nicu D. and Silver, Deborah and Min, Patrick},
@@ -788,13 +789,13 @@
   number  = {3}
 }
 
-
 @inproceedings{Crane2013,
   author    = {Keenan Crane and Fernando de Goes and Mathieu Desbrun and Peter Schr\"{o}der},
   title     = {Digital geometry processing with discrete exterior calculus},
   booktitle = {ACM SIGGRAPH 2013 courses},
   year      = {2013}
 }
+
 
 @article{Crane2013a,
   title   = {Geodesics in heat: A new approach to computing distance based on heat flow},
@@ -849,13 +850,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{Dai2018a,
   title     = {{3DMV}: Joint {3D}-multi-view prediction for {3D} semantic scene segmentation},
   author    = {Dai, Angela and Nie{\ss}ner, Matthias},
   booktitle = ECCV,
   year      = {2018}
 }
+
 
 @article{DeGoes2011,
   author  = {De Goes, Fernando and Goldenstein, Siome and Desbrun, Mathieu and Velho, Luiz},
@@ -880,13 +881,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{Desbrun1999,
   author    = {Desbrun, Mathieu and Meyer, Mark and Schr\"{o}der, Peter and Barr, Alan H.},
   title     = {Implicit fairing of irregular meshes using diffusion and curvature flow},
   booktitle = {SIGGRAPH},
   year      = {1999}
 }
+
 
 @article{Devlin2018,
   author  = {Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
@@ -1056,7 +1057,6 @@
   year    = {2014}
 }
 
-
 @article{Fleishman2003,
   author  = {Fleishman, Shachar and Drori, Iddo and Cohen-Or, Daniel},
   title   = {Bilateral mesh denoising},
@@ -1065,6 +1065,7 @@
   volume  = {22},
   number  = {3}
 }
+
 
 @inproceedings{Frisken2000,
   author    = {Frisken, Sarah F. and Perry, Ronald N. and Rockwood, Alyn P. and Jones, Thouis R.},
@@ -1097,7 +1098,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{GarciaGarcia2016,
   author    = {A. Garcia-Garcia and F. Gomez-Donoso and J. Garcia-Rodriguez and S. Orts-Escolano and M. Cazorla and J. Azorin-Lopez},
   booktitle = {2016 International Joint Conference on Neural Networks (IJCNN)},
@@ -1113,6 +1113,7 @@
   year      = {2017}
 }
 
+
 @inproceedings{Genova2020,
   title     = {Local Deep Implicit Functions for {3D} Shape},
   author    = {Genova, Kyle and Cole, Forrester and Sud, Avneesh and Sarna, Aaron and Funkhouser, Thomas},
@@ -1127,13 +1128,13 @@
   year      = {2017}
 }
 
-
 @inproceedings{Girdhar2016,
   title     = {Learning a predictable and generative vector representation for objects},
   author    = {Girdhar, Rohit and Fouhey, David F and Rodriguez, Mikel and Gupta, Abhinav},
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Glorot2011,
   title     = {Deep sparse rectifier neural networks},
@@ -1151,7 +1152,6 @@
   number  = {5}
 }
 
-
 @article{Golovinskiy2009,
   author  = {Aleksey Golovinskiy and Thomas Funkhouser},
   title   = {Consistent segmentation of {3D} models},
@@ -1168,6 +1168,7 @@
   author    = {Ian Goodfellow and Yoshua Bengio and Aaron Courville},
   publisher = {MIT Press}
 }
+
 
 @inproceedings{Goodfellow2016a,
   author    = {Ian Goodfellow and Jean Pouget-Abadie and Mehdi Mirza and Bing Xu and David Warde-Farley and Sherjil Ozair and Aaron Courville and Yoshua Bengio},
@@ -1377,7 +1378,6 @@
   year    = {1996}
 }
 
-
 @inproceedings{Hassani2019,
   title     = {Unsupervised multi-task feature learning on point clouds},
   author    = {Hassani, Kaveh and Haley, Mike},
@@ -1402,6 +1402,7 @@
   volume  = {31},
   number  = {12}
 }
+
 
 @inproceedings{Hazarika2020,
   title     = {Misa: Modality-invariant and-specific representations for multimodal sentiment analysis},
@@ -1527,7 +1528,6 @@
   number  = {2}
 }
 
-
 @article{Huang2011a,
   author  = {Huang, Qixing and Koltun, Vladlen and Guibas, Leonidas},
   title   = {Joint shape segmentation with linear programming},
@@ -1544,6 +1544,7 @@
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @article{Huang2018,
   author  = {Huang, Haibin and Kalogerakis, Evangelos and Chaudhuri, Siddhartha and Ceylan, Duygu and Kim, Vladimir G and Yumer, Ersin},
@@ -1601,7 +1602,6 @@
   number  = {5}
 }
 
-
 @inproceedings{Jiang2019,
   author    = {Jiang, Jianwen and Bao, Di and Chen, Ziqiang and Zhao, Xibin and Gao, Yue},
   booktitle = AAAI,
@@ -1616,6 +1616,7 @@
   booktitle = CVPR,
   year      = {2020}
 }
+
 
 @article{Jimenez2001,
   author  = {Jim{\'e}nez, Pablo and Thomas, Federico and Torras, Carme},
@@ -1795,13 +1796,13 @@
   year      = {2003}
 }
 
-
 @inproceedings{Kazhdan2006,
   author    = {Kazhdan, Michael and Bolitho, Matthew and Hoppe, Hugues},
   title     = {Poisson surface reconstruction},
   booktitle = SGPOLD,
   year      = {2006}
 }
+
 
 @article{Kazhdan2013,
   author  = {Kazhdan, Michael and Hoppe, Hugues},
@@ -2206,13 +2207,13 @@
   author  = {Qinqing Liu and Peng-Shuai Wang and Chunjiang Zhu and Blake Blumenfeld Gaines and Tan Zhu and Jinbo Bi and Minghu Song}
 }
 
-
 @inproceedings{Liu2021a,
   title     = {Swin transformer: Hierarchical vision transformer using shifted windows},
   author    = {Liu, Ze and Lin, Yutong and Cao, Yue and Hu, Han and Wei, Yixuan and Zhang, Zheng and Lin, Stephen and Guo, Baining},
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @inproceedings{Liu2021b,
   title     = {Deep Implicit Moving Least-Squares Functions for {3D} Reconstruction},
@@ -2277,13 +2278,13 @@
   year      = {2019}
 }
 
-
 @inproceedings{Lowe1989,
   author    = {Lowe, David},
   title     = {Adaptive radial basis function nonlinearities, and the problem of generalisation},
   booktitle = {the 1st IEE International Conference on Artificial Neural Networks},
   year      = {1989}
 }
+
 
 @article{Lu2016,
   author  = {Xuequan Lu and Zhigang Deng and and Wenzhi Chen},
@@ -2308,13 +2309,13 @@
   year    = {2017}
 }
 
-
 @inproceedings{Lyu2020,
   author    = {Yecheng Lyu and Xinming Huang and Ziming Zhang},
   title     = {Learning to segment {3D} point clouds in {2D} image space},
   booktitle = CVPR,
   year      = {2020}
 }
+
 
 @inproceedings{Ma2022,
   title     = {Rethinking network design and local geometry in point cloud: A simple residual {MLP} framework},
@@ -2329,7 +2330,6 @@
   journal = {Journal of machine learning research},
   year    = {2008}
 }
-
 
 @inproceedings{Maes2010,
   author    = {Maes, C. and Fabry, T. and Keustermans, J. and Smeets, D. and Suetens, P. and Vandermeulen, D.},
@@ -2347,6 +2347,7 @@
   howpublished = {arXiv:1511.05644 [cs.LG]}
 }
 
+
 @article{Mallick2014,
   author  = {Mallick, T. and Das, P.P. and Majumdar, A.K.},
   title   = {Characterizations of noise in Kinect depth images: A review},
@@ -2356,13 +2357,13 @@
   number  = {6}
 }
 
-
 @inproceedings{Mao2021,
   title     = {Voxel Transformer for {3D} Object Detection},
   author    = {Mao, Jiageng and Xue, Yujing and Niu, Minzhe and Bai, Haoyue and Feng, Jiashi and Liang, Xiaodan and Xu, Hang and Xu, Chunjing},
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Martel2021,
   title   = {{ACORN}: {Adaptive} coordinate networks for neural scene representation},
@@ -2380,13 +2381,13 @@
   year      = {2015}
 }
 
-
 @inproceedings{Maturana2015,
   author    = {Maturana, Daniel and Scherer, Sebastian},
   title     = {{VoxNet}: A {3D} convolutional neural network for real-time object recognition},
   booktitle = IROS,
   year      = {2015}
 }
+
 
 @article{Meagher1982,
   author  = {Donald Meagher},
@@ -2793,13 +2794,13 @@
   year      = {2019}
 }
 
-
 @inproceedings{Rahimi2018,
   title     = {Random features for large-scale kernel machines},
   author    = {Rahimi, Ali and Recht, Benjamin},
   booktitle = NeurIPS,
   year      = {2008}
 }
+
 
 @article{Rainer2019,
   author  = {Gilles Rainer and Wenzel Jakob and Abhijeet Ghosh and Tim Weyrich},
@@ -2819,7 +2820,6 @@
   year    = 2020
 }
 
-
 @article{Ramesh2022,
   title   = {Hierarchical text-conditional image generation with {CLIP} latents},
   author  = {Ramesh, Aditya and Dhariwal, Prafulla and Nichol, Alex and Chu, Casey and Chen, Mark},
@@ -2836,6 +2836,7 @@
   number  = {1},
   year    = {2010}
 }
+
 
 @article{Ray2009,
   author  = {Ray, Nicolas and Vallet, Bruno and Alonso, Laurent and L\'{e}vy, Bruno},
@@ -2993,13 +2994,13 @@
   year      = {2004}
 }
 
-
 @inproceedings{Schelten2015,
   author    = {Schelten, K. and Nowozin, S. and Jancsary, J. and Rother, C. and Roth, S.},
   title     = {Interleaved regression tree field cascades for blind image deconvolution},
   booktitle = {Applications of Computer Vision (WACV)},
   year      = {2015}
 }
+
 
 @article{Schmidt2016,
   author  = {Schmidt, U. and Jancsary, J. and Nowozin, S. and Roth, S. and Rother, C.},
@@ -3017,7 +3018,6 @@
   year      = {2016}
 }
 
-
 @article{Sethian1999,
   title   = {Fast marching methods},
   author  = {Sethian, James A.},
@@ -3026,6 +3026,7 @@
   number  = {2},
   year    = {1999}
 }
+
 
 @article{Shao2012,
   author  = {Shao, Tianjia and Xu, Weiwei and Zhou, Kun and Wang, Jingdong and Li, Dongping and Guo, Baining},
@@ -3085,13 +3086,13 @@
   year      = {2016}
 }
 
-
 @inproceedings{Sharma2018,
   author    = {Gopal Sharma and Rishabh Goyal and Difan Liu and Evangelos Kalogerakis and Subhransu Maji},
   title     = {{CSGNet}: Neural shape parser for constructive solid geometry},
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @article{Sharma2018a,
   author  = {Sharma, Rishi and Barratt, Shane and Ermon, Stefano and Pande, Vijay},
@@ -3109,7 +3110,6 @@
   year    = {2020}
 }
 
-
 @article{Shen2004,
   author  = {Yuzhong Shen and Barner, K.E.},
   title   = {Fuzzy vector median-based surface smoothing},
@@ -3118,6 +3118,7 @@
   volume  = {10},
   number  = {3}
 }
+
 
 @article{Shen2012,
   author  = {Shen, Chao-Hui and Fu, Hongbo and Chen, Kang and Hu, Shi-Min},
@@ -3182,7 +3183,6 @@
   year      = {2002}
 }
 
-
 @inproceedings{Simonovsky2017,
   title     = {Dynamic edge-conditioned filters in convolutional neural networks on graphs},
   author    = {Simonovsky, Martin and Komodakis, Nikos},
@@ -3198,6 +3198,7 @@
   year      = {2016}
 }
 
+
 @inproceedings{Sinha2017,
   author    = {Ayan Sinha and Asim Unmesh and Qixing Huang and Karthik Ramani},
   title     = {{SurfNet}: Generating {3D} shape surfaces using deep residual networks},
@@ -3205,13 +3206,13 @@
   year      = {2017}
 }
 
-
 @article{Sirignano2018,
   title   = {{DGM}: A deep learning algorithm for solving partial differential equations},
   author  = {Sirignano, Justin and Spiliopoulos, Konstantinos},
   journal = {Journal of computational physics},
   year    = {2018}
 }
+
 
 @inproceedings{Sitzmann2019,
   title     = {Scene representation networks: Continuous {3D}-structure-aware neural scene representations},
@@ -3255,7 +3256,6 @@
   year      = {2017}
 }
 
-
 @online{Song2019,
   author       = {Shuran Song},
   lassaccessed = {May 20, 2019},
@@ -3272,6 +3272,7 @@
   year      = {2004}
 }
 
+
 @article{Srivastava2014,
   author  = {Srivastava, Nitish and Hinton, Geoffrey E and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
   title   = {{Dropout}: A simple way to prevent neural networks from overfitting},
@@ -3281,13 +3282,13 @@
   number  = {1}
 }
 
-
 @inproceedings{Stutz2018,
   author    = {Stutz, David and Geiger, Andreas},
   booktitle = CVPR,
   title     = {Learning {3D} shape completion from laser scan data with weak supervision},
   year      = {2018}
 }
+
 
 @inproceedings{Su2015,
   author    = {Su, Hang and Maji, Subhransu and Kalogerakis, Evangelos and Learned-Miller, Erik},
@@ -3356,7 +3357,6 @@
   organization = {Eurographics Association}
 }
 
-
 @inproceedings{Sun2015,
   author    = {Xiao Sun and Yichen Wei and Shuang Liang and Xiaoou Tang and Jian Sun},
   title     = {Cascaded hand pose regression},
@@ -3371,6 +3371,7 @@
   booktitle = ECCV,
   year      = {2022}
 }
+
 
 @article{Sung2015,
   author  = {Sung, Minhyuk and Kim, Vladimir G and Angst, Roland and Guibas, Leonidas},
@@ -3436,7 +3437,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{Tang2021,
   title     = {{OctField}: Hierarchical Implicit Functions for {3D} Modeling},
   author    = {Tang, Jia-Heng and Chen, Weikai and Yang, Jie and Wang, Bo and Liu, Songrun and Yang, Bo and Gao, Lin},
@@ -3451,6 +3451,7 @@
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Tarini2004,
   author  = {Tarini, Marco and Hormann, Kai and Cignoni, Paolo and Montani, Claudio},
@@ -3496,7 +3497,6 @@
   year      = 2019
 }
 
-
 @inproceedings{Tian2020,
   title     = {Contrastive multiview coding},
   author    = {Tian, Yonglong and Krishnan, Dilip and Isola, Phillip},
@@ -3512,13 +3512,13 @@
   year      = {2017}
 }
 
+
 @inproceedings{Tomasi1998,
   author    = {C. Tomasi and R. Manduchi},
   title     = {Bilateral filtering for gray and color images},
   booktitle = ICCV,
   year      = {1998}
 }
-
 
 @inproceedings{Tulsiani2017,
   author    = {Tulsiani, Shubham and Zhou, Tinghui and Efros, Alexei A and Malik, Jitendra},
@@ -3534,6 +3534,7 @@
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @inproceedings{Uhrig2017,
   author    = {Jonas Uhrig and Nick Schneider and Lukas Schneider and Thomas Brox and Andreas Geiger},
@@ -3556,7 +3557,6 @@
   year      = {2021}
 }
 
-
 @article{Vallet2008,
   title   = {Spectral geometry processing with manifold harmonics},
   author  = {Vallet, Bruno and L{\'e}vy, Bruno},
@@ -3565,6 +3565,7 @@
   volume  = {27},
   number  = {2}
 }
+
 
 @inproceedings{Vaswani2017,
   author    = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
@@ -3587,7 +3588,6 @@
   year      = {2008}
 }
 
-
 @inproceedings{Wald2019,
   author    = {Wald, Johanna and Avetisyan, Armen and Navab, Nassir and Tombari, Federico and Nie{\ss}ner, Matthias},
   title     = {{RIO}: {3D} Object Instance Re-Localization in Changing Indoor Environments},
@@ -3604,6 +3604,7 @@
   volume  = {44},
   number  = {7}
 }
+
 
 @article{Wang2014,
   author  = {Wang, Ruimin and Yang, Zhouwang and Liu, Ligang and Deng, Jiansong and Chen, Falai},
@@ -3814,6 +3815,14 @@
   title     = {Dense human body correspondences using convolutional networks},
   booktitle = CVPR,
   year      = {2016}
+}
+
+@misc{Wightman2019,
+  author       = {Ross Wightman},
+  title        = {PyTorch Image Models},
+  year         = {2019},
+  journal      = {GitHub repository},
+  howpublished = {\url{https://github.com/rwightman/pytorch-image-models}}
 }
 
 @article{Wilhelms1992,
