--- a/reference.bib
+++ b/reference.bib
@@ -37,6 +37,7 @@
 }
 
 
+
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
   title   = {Gaussian {KD-trees} for fast high-dimensional filtering},
@@ -45,7 +46,6 @@
   volume  = {28},
   number  = {3}
 }
-
 
 
 @article{Adams2010,
@@ -58,12 +58,14 @@
 }
 
 
+
 @inproceedings{Adamson2003,
   author    = {Adamson, Anders and Alexa, Marc},
   title     = {Approximating and intersecting surfaces from points},
   booktitle = SGPOLD,
   year      = {2003}
 }
+
 
 @article{Adikusuma2020,
   title   = {Fast construction of discrete geodesic graphs},
@@ -80,7 +82,6 @@
   title     = {The conversation: Deep audio-visual speech enhancement},
   year      = {2018}
 }
-
 
 @inproceedings{Alayrac2020,
   title     = {Self-Supervised MultiModal Versatile Networks},
@@ -115,13 +116,13 @@
   year      = {1999}
 }
 
+
 @inproceedings{Aoki2019,
   author    = {Aoki, Yasuhiro and Goforth, Hunter and Arun Srivatsan, Rangaprasad and Lucey, Simon},
   booktitle = CVPR,
   title     = {{PointNetLK}: Robust \& Efficient Point Cloud Registration Using PointNet},
   year      = {2019}
 }
-
 
 @inproceedings{Armeni2016,
   title     = {{3D} Semantic Parsing of Large-Scale Indoor Spaces},
@@ -200,6 +201,7 @@
   year      = {2011}
 }
 
+
 @article{Averkiou2016,
   author  = {Averkiou, Melinos and Kim, Vladimir G. and Mitra, Niloy J.},
   title   = {Autocorrelation Descriptor for Efficient Co-Alignment of 3D Shape Collections},
@@ -208,7 +210,6 @@
   number  = {1},
   year    = {2016}
 }
-
 
 @article{Ba2016,
   title   = {Layer normalization},
@@ -503,6 +504,7 @@
   number  = {9-11}
 }
 
+
 @article{Cao2014,
   author  = {Cao, Chen and Hou, Qiming and Zhou, Kun},
   title   = {Displaced dynamic expression regression for real-time facial tracking and animation},
@@ -511,7 +513,6 @@
   volume  = {33},
   number  = {4}
 }
-
 
 @inproceedings{Cao2018,
   author    = {Cao, Yan-Pei and Liu, Zheng-Ning and Kuang, Zheng-Fei and Kobbelt, Leif and Hu, Shi-Min},
@@ -536,13 +537,13 @@
   year      = {2020}
 }
 
+
 @article{Chang2015,
   title   = {{ShapeNet}: An information-rich {3D} model repository},
   author  = {Chang, Angel X. and Funkhouser, Thomas and Guibas, Leonidas and Hanrahan, Pat and Huang, Qixing and Li, Zimo and Savarese, Silvio and Savva, Manolis and Song, Shuran and Su, Hao and Xiao, Jianxiong and Yi, Li and Yu, Fisher},
   journal = {arXiv preprint arXiv:1512.03012},
   year    = {2015}
 }
-
 
 @inproceedings{Chang2017,
   author    = {Chang, Angel and Dai, Angela and Funkhouser, Thomas and Halber, Maciej and Niessner, Matthias and Savva, Manolis and Song, Shuran and Zeng, Andy and Zhang, Yinda},
@@ -605,13 +606,13 @@
   number  = {4}
 }
 
+
 @inproceedings{Chen2019,
   title     = {Learning implicit fields for generative shape modeling},
   author    = {Chen, Zhiqin and Zhang, Hao},
   booktitle = CVPR,
   year      = {2019}
 }
-
 
 @inproceedings{Chen2019a,
   author    = {Zhiqin Chen and Kangxue Yin and Matthew Fisher and Siddhartha Chaudhuri and Hao Zhang},
@@ -628,6 +629,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Chen2020a,
   title     = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
   author    = {Chen, Ting and Kornblith, Simon and Swersky, Kevin and Norouzi, Mohammad and Hinton, Geoffrey},
@@ -642,13 +644,13 @@
   year      = {2020}
 }
 
-
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
   title     = {Exploring Simple Siamese Representation Learning},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Chen2022,
   title     = {Scaling up Kernels in {3D CNNs}},
@@ -657,13 +659,13 @@
   year      = {2022}
 }
 
-
 @inproceedings{Cheng2021,
   title     = {Back-Tracing Representative Points for Voting-based {3D} Object Detection in Point Clouds},
   author    = {Cheng, Bowen and Sheng, Lu and Shi, Shaoshuai and Yang, Ming and Xu, Dong},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Cheng2022,
   title     = {{PatchFormer}: A versatile {3D} transformer based on patch attention},
@@ -678,7 +680,6 @@
   booktitle = threeDV,
   year      = {2019}
 }
-
 
 @inproceedings{Chibane2020,
   title     = {Implicit functions in feature space for 3d shape reconstruction and completion},
@@ -696,6 +697,7 @@
   volume  = {33},
   number  = {4}
 }
+
 
 @inproceedings{Choy2016,
   author    = {Choy, Christopher and Xu, Danfei and Gwak, JunYoung and Chen, Kevin and Savarese, Silvio},
@@ -779,7 +781,6 @@
   year      = {2020}
 }
 
-
 @article{Cornea2007,
   author  = {Cornea, Nicu D. and Silver, Deborah and Min, Patrick},
   title   = {Curve-skeleton properties, applications, and algorithms},
@@ -789,13 +790,13 @@
   number  = {3}
 }
 
+
 @inproceedings{Crane2013,
   author    = {Keenan Crane and Fernando de Goes and Mathieu Desbrun and Peter Schr\"{o}der},
   title     = {Digital geometry processing with discrete exterior calculus},
   booktitle = {ACM SIGGRAPH 2013 courses},
   year      = {2013}
 }
-
 
 @article{Crane2013a,
   title   = {Geodesics in heat: A new approach to computing distance based on heat flow},
@@ -805,6 +806,7 @@
   number  = {5},
   year    = {2013}
 }
+
 
 @misc{cublas2022,
   title        = {{cuBLAS}},
@@ -857,7 +859,6 @@
   year      = {2018}
 }
 
-
 @article{DeGoes2011,
   author  = {De Goes, Fernando and Goldenstein, Siome and Desbrun, Mathieu and Velho, Luiz},
   title   = {Exoskeleton: Curve network abstraction for {3D} shapes},
@@ -866,6 +867,7 @@
   volume  = {35},
   number  = {1}
 }
+
 
 @inproceedings{Deng2009,
   author    = {Jia Deng and Wei Dong and Richard Socher and Li-jia Li and Kai Li and Li Fei-fei},
@@ -888,13 +890,13 @@
   year      = {1999}
 }
 
-
 @article{Devlin2018,
   author  = {Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
   journal = {arXiv preprint arXiv:1810.04805},
   title   = {{BERT}: Pre-training of deep bidirectional transformers for language understanding},
   year    = {2018}
 }
+
 
 @article{Diebel2006,
   author  = {Diebel, James R. and Thrun, Sebastian and Br\"{u}nig, Michael},
@@ -1066,13 +1068,13 @@
   number  = {3}
 }
 
-
 @inproceedings{Frisken2000,
   author    = {Frisken, Sarah F. and Perry, Ronald N. and Rockwood, Alyn P. and Jones, Thouis R.},
   title     = {Adaptively sampled distance fields: A general representation of shape for computer graphics},
   booktitle = {SIGGRAPH},
   year      = {2000}
 }
+
 
 @article{Fuhrmann2014,
   author  = {Fuhrmann, Simon and Goesele, Michael},
@@ -1105,7 +1107,6 @@
   year      = {2016}
 }
 
-
 @inproceedings{Gehring2017,
   author    = {Jonas Gehring and Michael Auli and David Grangier and Denis Yarats and Yann N. Dauphin},
   title     = {Convolutional sequence to sequence learning},
@@ -1121,6 +1122,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Gilmer2017,
   title     = {Neural message passing for quantum chemistry},
   author    = {Gilmer, Justin and Schoenholz, Samuel S and Riley, Patrick F and Vinyals, Oriol and Dahl, George E},
@@ -1135,13 +1137,13 @@
   year      = {2016}
 }
 
-
 @inproceedings{Glorot2011,
   title     = {Deep sparse rectifier neural networks},
   author    = {Glorot, Xavier and Bordes, Antoine and Bengio, Yoshua},
   booktitle = {International Conference on Artificial Intelligence and Statistics},
   year      = {2011}
 }
+
 
 @article{Golovinskiy2008,
   author  = {Golovinskiy, Aleksey and Funkhouser, Thomas},
@@ -1161,7 +1163,6 @@
   year    = {2009}
 }
 
-
 @book{Goodfellow2016,
   title     = {Deep Learning},
   year      = {2016},
@@ -1176,6 +1177,7 @@
   booktitle = NeurIPS,
   year      = {2016}
 }
+
 
 @inproceedings{Graham2015,
   author    = {Ben Graham},
@@ -1385,7 +1387,6 @@
   year      = {2019}
 }
 
-
 @article{Hassani2022,
   title   = {Dilated neighborhood attention transformer},
   author  = {Ali Hassani and Humphrey Shi},
@@ -1410,6 +1411,7 @@
   booktitle = {ACM International Conference on Multimedia},
   year      = {2020}
 }
+
 
 @article{He2013,
   author  = {He, Lei and Schaefer, Scott},
@@ -1537,7 +1539,6 @@
   number  = {6}
 }
 
-
 @inproceedings{Huang2016,
   title     = {Deep networks with stochastic depth},
   author    = {Huang, Gao and Sun, Yu and Liu, Zhuang and Sedra, Daniel and Weinberger, Kilian Q},
@@ -1554,6 +1555,7 @@
   number  = {1},
   year    = {2018}
 }
+
 
 @article{Ioannidou2017,
   author    = {Ioannidou, Anastasia and Chatzilari, Elisavet and Nikolopoulos, Spiros and Kompatsiaris, Ioannis},
@@ -1609,7 +1611,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Jiang2020,
   title     = {Local implicit grid representations for {3D} scenes},
   author    = {Jiang, Chiyu and Sud, Avneesh and Makadia, Ameesh and Huang, Jingwei and Nie{\ss}ner, Matthias and Funkhouser, Thomas},
@@ -1626,6 +1627,7 @@
   volume  = {25},
   number  = {2}
 }
+
 
 @inproceedings{Johns2016,
   author    = {Edward Johns and Stefan Leutenegger and Andrew J. Davison},
@@ -1803,7 +1805,6 @@
   year      = {2006}
 }
 
-
 @article{Kazhdan2013,
   author  = {Kazhdan, Michael and Hoppe, Hugues},
   title   = {Screened Poisson surface reconstruction},
@@ -1812,6 +1813,7 @@
   volume  = {32},
   number  = {3}
 }
+
 
 @article{Kazhdan2020,
   title   = {Poisson Surface Reconstruction with Envelope Constraints},
@@ -2214,13 +2216,13 @@
   year      = {2021}
 }
 
-
 @inproceedings{Liu2021b,
   title     = {Deep Implicit Moving Least-Squares Functions for {3D} Reconstruction},
   author    = {Liu, Shi-Lin and Guo, Hao-Xiang and Pan, Hao and Wang, Peng-Shuai and Tong, Xin and Liu, Yang},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Liu2021c,
   title     = {Contrastive Multimodal Fusion with {TupleInfoNCE}},
@@ -2241,6 +2243,13 @@
   title     = {Group-Free 3D Object Detection via Transformers},
   booktitle = ICCV,
   year      = {2021}
+}
+
+@inproceedings{Liu2022,
+  title     = {{MaxViT}: Multi-Axis Vision Transformer},
+  author    = {Tu, Zhengzhong and Talebi, Hossein and Zhang, Han and Yang, Feng and Milanfar, Peyman and Bovik, Alan and Li, Yinxiao},
+  booktitle = ECCV,
+  year      = {2022}
 }
 
 @inproceedings{Loffe2015,
