--- a/reference.bib
+++ b/reference.bib
@@ -30,7 +30,7 @@
 
 
 @inproceedings{Achlioptas2018,
-  author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas Guibas},
+  author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas J. Guibas},
   title     = {Learning representations and generative models for {3D} point clouds},
   booktitle = ICML,
   year      = {2018}
@@ -540,7 +540,7 @@
 
 @article{Chang2015,
   title   = {{ShapeNet}: An information-rich {3D} model repository},
-  author  = {Chang, Angel X. and Funkhouser, Thomas and Guibas, Leonidas and Hanrahan, Pat and Huang, Qixing and Li, Zimo and Savarese, Silvio and Savva, Manolis and Song, Shuran and Su, Hao and Xiao, Jianxiong and Yi, Li and Yu, Fisher},
+  author  = {Chang, Angel X. and Funkhouser, Thomas and Guibas, Leonidas J. and Hanrahan, Pat and Huang, Qixing and Li, Zimo and Savarese, Silvio and Savva, Manolis and Song, Shuran and Su, Hao and Xiao, Jianxiong and Yi, Li and Yu, Fisher},
   journal = {arXiv preprint arXiv:1512.03012},
   year    = {2015}
 }
@@ -870,7 +870,7 @@
 
 
 @inproceedings{Deng2009,
-  author    = {Jia Deng and Wei Dong and Richard Socher and Li-jia Li and Kai Li and Li Fei-fei},
+  author    = {Jia Deng and Wei Dong and Richard Socher and Jia Li and Kai Li and Li Fei-Fei},
   title     = {{ImageNet}: A large-scale hierarchical image database},
   booktitle = CVPR,
   year      = {2009}
@@ -1011,7 +1011,7 @@
 }
 
 @inproceedings{Fan2017,
-  author    = {Fan, Haoqiang and Su, Hao and Guibas, Leonidas},
+  author    = {Fan, Haoqiang and Su, Hao and Guibas, Leonidas J.},
   title     = {A point set generation network for {3D} object reconstruction from a single image},
   booktitle = CVPR,
   year      = {2017}
@@ -1531,7 +1531,7 @@
 }
 
 @article{Huang2011a,
-  author  = {Huang, Qixing and Koltun, Vladlen and Guibas, Leonidas},
+  author  = {Huang, Qixing and Koltun, Vladlen and Guibas, Leonidas J.},
   title   = {Joint shape segmentation with linear programming},
   journal = SA,
   year    = {2011},
@@ -2060,7 +2060,7 @@
 }
 
 @article{Li2017,
-  author  = {Li, Jun and Xu, Kai and Chaudhuri, Siddhartha and Yumer, Ersin and Zhang, Hao and Guibas, Leonidas},
+  author  = {Li, Jun and Xu, Kai and Chaudhuri, Siddhartha and Yumer, Ersin and Zhang, Hao and Guibas, Leonidas J.},
   title   = {{GRASS}: Generative recursive autoencoders for shape structures},
   journal = SIG,
   year    = {2017},
@@ -2478,7 +2478,7 @@
 }
 
 @inproceedings{Mo2019,
-  author    = {Mo, Kaichun and Zhu, Shilin and Chang, Angel X and Yi, Li and Tripathi, Subarna and Guibas, Leonidas J and Su, Hao},
+  author    = {Mo, Kaichun and Zhu, Shilin and Chang, Angel X and Yi, Li and Tripathi, Subarna and Guibas, Leonidas J. and Su, Hao},
   title     = {{PartNet}: A Large-scale Benchmark for Fine-grained and Hierarchical Part-level {3D} Object Understanding},
   booktitle = CVPR,
   year      = {2019}
@@ -3357,7 +3357,7 @@
 }
 
 @article{Sun2009a,
-  author       = {Sun, Jian and Ovsjanikov, Maks and Guibas, Leonidas},
+  author       = {Sun, Jian and Ovsjanikov, Maks and Guibas, Leonidas J.},
   title        = {A concise and provably informative multi-scale signature based on heat diffusion},
   journal      = SGP,
   year         = {2009},
@@ -3383,7 +3383,7 @@
 
 
 @article{Sung2015,
-  author  = {Sung, Minhyuk and Kim, Vladimir G and Angst, Roland and Guibas, Leonidas},
+  author  = {Sung, Minhyuk and Kim, Vladimir G and Angst, Roland and Guibas, Leonidas J.},
   title   = {Data-driven structural priors for shape completion},
   journal = SA,
   year    = {2015},
@@ -3977,7 +3977,7 @@
 
 @article{Xie2020,
   title   = {{PointContrast}: Unsupervised Pre-training for {3D} Point Cloud Understanding},
-  author  = {Xie, Saining and Gu, Jiatao and Guo, Demi and Qi, Charles R. and Guibas, Leonidas J and Litany, Or},
+  author  = {Xie, Saining and Gu, Jiatao and Guo, Demi and Qi, Charles R. and Guibas, Leonidas J. and Litany, Or},
   journal = ECCV,
   year    = {2020}
 }
@@ -4169,7 +4169,7 @@
 }
 
 @article{Yi2016,
-  author  = {Yi, Li and Kim, Vladimir G. and Ceylan, Duygu and Shen, I-Chao and Yan, Mengyan and Su, Hao and Lu, Cewu and Huang, Qixing and Sheffer, Alla and Guibas, Leonidas},
+  author  = {Yi, Li and Kim, Vladimir G. and Ceylan, Duygu and Shen, I-Chao and Yan, Mengyan and Su, Hao and Lu, Cewu and Huang, Qixing and Sheffer, Alla and Guibas, Leonidas J.},
   title   = {A scalable active framework for region annotation in 3D shape collections},
   journal = SA,
   year    = {2016},
@@ -4185,7 +4185,7 @@
 }
 
 @article{Yi2017a,
-  author  = {Yi, Li and Guibas, Leonidas and Hertzmann, Aaron and Kim, Vladimir G. and Su, Hao and Yumer, Ersin},
+  author  = {Yi, Li and Guibas, Leonidas J. and Hertzmann, Aaron and Kim, Vladimir G. and Su, Hao and Yumer, Ersin},
   title   = {Learning hierarchical shape segmentation and labeling from online repositories},
   journal = SIG,
   year    = {2017},
@@ -4194,7 +4194,7 @@
 }
 
 @inproceedings{Yi2017b,
-  author    = {Li Yi and Hao Su and Xingwen Guo and Leonidas Guibas},
+  author    = {Li Yi and Hao Su and Xingwen Guo and Leonidas J. Guibas},
   title     = {{SyncSpecCNN}: Synchronized spectral {CNN} for {3D} shape segmentation},
   booktitle = CVPR,
   year      = {2017}
@@ -4529,7 +4529,7 @@
 
 @inproceedings{Zhu2020,
   title     = {{AdaCoSeg}: Adaptive Shape Co-Segmentation with Group Consistency Loss},
-  author    = {Chenyang Zhu and Kai Xu and Siddhartha Chaudhuri and Li Yi and Leonidas Guibas and Hao Zhang},
+  author    = {Chenyang Zhu and Kai Xu and Siddhartha Chaudhuri and Li Yi and Leonidas J. Guibas and Hao Zhang},
   year      = {2020},
   booktitle = CVPR
 }
